# ANARCI

./: .gitattributes  .gitignore  INSTALL.md  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
build_pipeline/: RUN_pipeline.sh  environment.yml
lib/python/anarci/: __init__.py
