[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ANARCI"
requires-python = ">=3.8"
description = "Antibody Numbering and Antigen Receptor ClassIfication"
readme = "README.md"
authors = [{ name = "James Dunbar", email = "opig@stats.ox.ac.uk" }]
maintainers = [{ name = "Nuri Jung", email = "jnooree@snu.ac.kr" }]
dependencies = ["biopython"]
dynamic = ["version"]

[project.urls]
"Homepage" = "http://opig.stats.ox.ac.uk/webapps/ANARCI"

[dependency-groups]
dev = ["debugpy>=1.8.20,<2.0.0", { include-group = "lint" }]
lint = ["ruff>=0.15.0,<0.16.0"]

[tool.setuptools]
script-files = ["bin/ANARCI"]

[tool.setuptools.packages.find]
where = ["lib/python"]

[tool.setuptools.package-data]
"*" = ["ALL.hmm*"]

[tool.setuptools_scm]
version_scheme = "calver-by-date"

[tool.uv]
constraint-dependencies = [
    "pygls<2.0", # vscode requires pygls<2.0
]

[tool.ruff]
line-length = 79
src = ["lib/python"]
extend-include = ["*.pyi", "*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "RUF"]
ignore = [
    "E74",
    "F403",
    "F405",
    "N803",
    "N806",
    "S603",
    "S607",
    "B008",
    "B905",
    "PTH123",
    "PLW2901",
    "NPY002",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
no-lines-before = ["local-folder"]
